--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest",
+    "test": "jest --watch",
     "dev": "nodemon server.js"
   },
   "module": "module",
